trunk/Archive2/46/d301d24623b765/output
main.cpp: In function 'void try_with(wchar_t, const char*)':
main.cpp:7:51: error: too many arguments to function 'int isblank(int)'
                << std::isblank(c, std::locale(loc)) << '\n';
                                                   ^
In file included from /usr/local/include/c++/4.9.2/cctype:42:0,
                 from /usr/local/include/c++/4.9.2/bits/localefwd.h:42,
                 from /usr/local/include/c++/4.9.2/ios:41,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/include/ctype.h:138:1: note: declared here
 __exctype (isblank);
 ^
